--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Application Candinow"
+      content="Un tracker de candidatures moderne, offline-first, conçu pour la clarté et l'action. Suivez vos entretiens, relances et offres avec une interface pastel épurée."
     />
     <link rel="apple-touch-icon" href="/logo192.png" />
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
     <title>Candinow</title>
   </head>
   <body>
